--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ dependencies:
   go_router: ^13.0.0
   freezed_annotation: ^2.4.1
   json_annotation: ^4.8.1
-  intl: ^0.18.1
+  intl: 0.20.2
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   flutter_secure_storage: ^9.0.0
